<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Průměr známek</string>
    <string name="hintET">Název (např. test)</string>
    <string name="action_settings">Nastavení</string>
    <string name="vymazatZnamky">Vymazat známky</string>
    <string name="feedback">Odeslat názor</string>
    <string name="weight">Váha</string>
    <string name="mark">Známka</string>
    <string name="name">Název</string>
    <string name="buttonAdd">Přidat známku</string>
    <string name="prumer">Průměr: </string>
    <string name="welcome_title">Co je nového?</string>
    <string name="titleDelete">Smazat</string>
    <string name="deleteAllMes">Smazat všechny známky v tomto předmětu</string>
    <string name="cancel">Zrušit</string>
    <string name="close">Zavřít</string>
    <string name="illegalArgument">Název nebo známka je prázdná</string>
    <string name="markCountTemplate">Počet: </string>
    <string name="prefs_screen_subjects">Názvy předmětů</string>
    <string name="restore">Obnovení</string>
    <string name="welcome_text">
         <b>Verze 3.5.B.5.55</b>
        \nNově se ukazují návrhy názvů známek podle již zadaných názvů
        \nOprava menších chyb
        \nZměnšena velikost aplikace\n\n

         <b>Verze 3.4.B.4.20</b>
         \nNová databáze (známky se přesouvají)
         \nPočet předmětu vzrostl na 14
         \nÚprava oznámení chyb
         \nVyčištěn kód pro lepší chod aplikace
         \nDo nastavení přibyla možnost zvolit si řazení známek (výchozí řazení je sestupně)
         \nZměna výchozích názvů předmětů (možnost změny v nastavení)
         \nOpraveny nalezené chyby
         \nU nově přidaných známek se ukládá i datum přidání (ve formátu: dd.MM.yyyy HH:mm)
         \nNová načítací obrazovka aplikace (změna pozadí + odebrání načítací lišty)\n\n

         <b>Verze 3.4.E.0.1</b>
         \n(Developer Preview - informace nejsou k dispozici)\n\n

         <b>Verze 3.3.S.0.43</b>
         \nOptimalizace vodorovného zobrazení\n\n

         <b>Verze 3.3.S.0.22</b>
         \nOprava chyb\n\n

         <b>Verze 3.2.S.2.9</b>
         \nOprava kritických chyb aplikace
         \nOprava chyb přehledu\n\n

         <b>Verze 3.2.B.1.50</b>
         \nOpravy chyb
         \nPřidán přehled průměrů pro lepší orientaci
         \nMožnost smazat všechna data\n\n

         <b>Verze 3.1.B.0.10</b>
         \nOpravy chyb u záložek předmětů
         \nPočet předmětů zvýšen na 10\n\n

         <b>Verze 3.0.B.0.10</b>
         \nPřidány záložky pro více předmětů
         \nNové možnosti v nastavení\n\n

         <b>Verze 2.4.S.3.2</b>
         \nOprava velikosti kolonek výpisu známek\n\n

         <b>Verze 2.4.S.2.7</b>
         \nPřidána možnost úpravy známek
         \nPo přidání známky se kolonky vymažou\n\n

         <b>Verze 2.3.S.0.10</b>
         \nOprava chyb
         \nZměna načítací obrazovky\n\n

         <b>Verze 2.2.S.1.4</b>
         \nZjenodušené nastavení
         \nOprava chyb
         \nZměna barev témat\n\n

         <b>Verze 2.0.S.5.1</b>
         \nNová položka v nastavení
         \nAutomatické aktualizace\n\n

         <b>Verze 2.0.S.0.1</b>
         \nOpravy chyb
         \nVylepšení nastavení
         \nZačátek práce na překladu\n\n

         <b>Verze 1.8.S.2.8</b>
         \nOpravy chyb u výběru designu\n\n

         <b>Verze 1.8.B.2.4</b>
         \nZavedeno nové číslování verzí
         \nOprava databáze známek
         \nZaveden výběr designu aplikace\n\n

         <b>Verze E.1.7</b>
         \nPřidáno \"Nastavení\"
         \nVýsledek se nyní zaokrouhlí na 2 desetinná místa\n\n

         <b>Verze B.1.6</b>
         \nOprava chyb
         \nPřidána licence \n\n

         <b>Verze S.1.5</b>
         \nZnámky se nyní ukládají do databáze
         \nOprava chyb
         \nZvýšena kompatibilita\n\n

        <b>Verze S.1.4</b>
        \nPřidáno mazání známek\n\n

        <b>Verze B.1.3</b>
        \nPřidán výpočet průměru\n\n

        <b>Verze A.1.2</b>
        \nVytvořeny nové podmínky pro vlkádání\n\n

        <b>Verze B.1.1</b>
        \nOprava menších chyb\n\n

        <b>Verze 1.0</b>
        \nFunkční rozhraní aplikace
        \nPřidána tabulka všech známek
        \nNový design aplikace a nový akční a notifikační bar
    </string>
    <string name="changelog">Novinky</string>
    <string name="title_activity_settings">Nastavení</string>

    <!-- Strings related to Settings -->

    <string name="generalHeader">Hlavní</string>
    <string name="generalHeaderSummary">Hlavní nastavení aplikace</string>
    <string name="weightedEnableSummary">Vážení známek je vypnuto</string>
    <string name="weightedDisableSummary">Vážení známek je zapnuto</string>
    <string name="weightedEnabled">Vážení známek</string>
    <string name="aboutAppMenuItem">O aplikaci</string>
    <string name="mainDeveloperTitle">Hlavní vývojář</string>
    <string name="mainDeveloperSummary">Jakub Ferenčík (Fely)</string>
    <string name="licence">Licence</string>
    <string name="licenceSummary">Klikněte pro zobrazení licence</string>
    <string name="action_licenses">Licenční ujednání</string>
    <string name="backToExit">Pro ukončení stiskni Zpět ještě jednou</string>

    <string-array name="themes">
        <item>Světlé</item>
        <item>Tmavé</item>
        <item>Černé (výhodné pro Amoled)</item>
    </string-array>
    <string-array name="themesValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="themeSummary">
        Vybrané téma: %s
    </string>

    <string name="prefs_overview_okmark">Nastavení zeleného průměru</string>
    <string name="prefs_overview_okmark_summary">Kliknutím nastavit rozmezí zeleného průměru</string>
    <string name="prefs_overview_ffmark">Nastavení oranžového průměru</string>
    <string name="prefs_overview_ffmark_summary">Kliknutím nastavit rozmezí oranžového průměru</string>
    <string name="prefs_overview_badmark">Nastavení červeného průměru</string>
    <string name="prefs_overview_badmark_summary">Automaticky se nastaví na horší průměry</string>
    <string name="pref_theme_title">Téma</string>
    <string name="aboutCategory">O aplikaci</string>
    <string name="versionTitle">Nainstalovaná verze aplikace</string>
    <string name="vibrateSwitchTitle">Vibrace</string>
    <string name="vibrateSwitchSummaryOff">Vibrace jsou vypnuty</string>
    <string name="vibrateSwitchSummaryOn">Vibrace jsou zapnuty</string>
    <string name="pref_sound_vibrate">Zvuky a vibrace</string>
    <string name="pref_sound_vibrate_summary">Nastavení vibrací a zvuku</string>
    <string name="illegalArgumentWeight">Váha nesmí být 0</string>
    <string name="editMark">Upravit známku</string>
    <string name="save">Uložit</string>
    <string name="invalidMarkWeight">Známka nebo váha je neplatná</string>
    <string name="show">Klikněte pro zobrazení</string>
    <string name="showOnly">Zobrazit</string>
    <string name="subjectPrefsCat">Přehled a předměty</string>
    <string name="changesAfterWhile">Změny se projeví na hlavní obrazovce</string>
    <string name="subjectOneNamePrefs">Název prvního předmětu</string>
    <string name="subjectTwoNamePrefs">Název druhého předmětu</string>
    <string name="subjectThreeNamePrefs">Název třetího předmětu</string>
    <string name="subjectFourNamePrefs">Název čtvrtého předmětu</string>
    <string name="subjectFiveNamePrefs">Název pátého předmětu</string>
    <string name="subjectSixNamePrefs">Název šestého předmětu</string>
    <string name="subjectSevenNamePrefs">Název sedmého předmětu</string>
    <string name="subjectEightNamePrefs">Název osmého předmětu</string>
    <string name="subjectNineNamePrefs">Název devátého předmětu</string>
    <string name="subjectTenNamePrefs">Název desátého předmětu</string>
    <string name="subjectElevenNamePrefs">Název jedenáctého předmětu</string>
    <string name="subjectTwelveNamePrefs">Název dvanáctého předmětu</string>
    <string name="subjectTtNamePrefs">Název třináctého předmětu</string>
    <string name="subjectFtNamePrefs">Název čtrnáctého předmětu</string>
    <string name="nameOneDefault">Matematika</string>
    <string name="nameThreeDefault">Čeština</string>
    <string name="nameTwoDefault">Angličtina</string>
    <string name="nameFourDefault">Dějepis</string>
    <string name="nameFiveDefault">Fyzika</string>
    <string name="nameSixDefault">Biologie</string>
    <string name="nameSevenDefault">Chemie</string>
    <string name="nameEightDefault">Zeměpis</string>
    <string name="nameNineDefault">Občanská výchova</string>
    <string name="nameTenDefault">Hudební výchova</string>
    <string name="nameElevenDefault">Informatika</string>
    <string name="nameTwelveDefault">Němčina</string>
    <string name="nameTtDefault">Výtvarná výchova</string>
    <string name="nameFtDefault">Tělesná výchova</string>
    <string name="overView">Přehled</string>
    <string name="errorSnackCannotDelete">Přehled není možné smazat!</string>
    <string name="wipeData">Vymazat všechna data</string>
    <string name="wipeDataSummary">Obnoví nastavení a data aplikace</string>
    <string name="titleWipeData">Vymazat data aplikace</string>
    <string name="processCannotBeUndone">Proces nelze vrátit zpět!</string>
    <string name="text">text</string>
    <string name="updateAvailable">Aktualizace k dispozici</string>
    <string name="updateAvailableMes">Nová verze je k dispozici ke stažění</string>
    <string name="markAddedWhen">Známka byla přidána</string>
    <string name="dateTitle">Datum přidání</string>
    <string name="errorSnackListSizeZero">V tomto předmětu není žádná známka</string>
    <string name="listPrefOrder">Řazení známek</string>
    <string name="nullDateException">NullPointerException\nDatum nenalezeno</string>
    <string name="progressDialogMes">Probíhá přesun známek do nové databáze</string>
    <string name="progressDialogTitle">Apliakce se aktualizuje</string>
    <string name="autoCompleteTitle">Návrhy názvů známek</string>
    <string name="autoCompleteSumOn">Zobrazování zapnuto</string>
    <string name="autoCompleteSumOff">Zobrazování vypnuto</string>
    <string name="toast_error_settings_bad_avg">Nelze zvolit větší ani setejný průměr než \"Oranžovém průměru\"!</string>
    <string name="toast_error_settings_big_avg">Hodnota nemůže být větší než 4!</string>
    <string name="toast_error_settings_small_avg">Hodnota nemůže být menší ani stejný než \"Zelený průměr\"!</string>
    <string name="toast_error_settings_zero_avg">Známka nemůže být menší než 1</string>
    <string name="prefs_subject_okmark_title">Zelený průměr</string>
    <string name="prefs_subject_okmark_summary">{[SettingsActivity.okMark.getText()]-[SettingsActivity.ffMark.getText()]}</string>
    <string name="prefs_subject_ffmark_title">Oranžový průměr</string>
    <string name="prefs_subject_ffmark_summary">{[SettingsActivity.ffMark.getText()]-[SettingsActivity.badMark.getText()]}</string>
    <string name="prefs_subject_badmark_title">Červený průměr</string>
    <string name="prefs_subject_badmark_summary">{[SettingsActivity.badMark.getText()]+}</string>
    <string name="tab_title_change_et">(př. Matematika)</string>
    <string name="tab_title_change_label">Název předmětu</string>
    <string name="tab_title_change_dismiss_dialog">Neuloženo</string>
    <string name="versionCodeFull">(%1$s)</string>

    <string-array name="order">
        <item>Sestupně</item>
        <item>Vzestupně</item>
    </string-array>
    <string-array name="orderValues">
        <item>desc</item>
        <item>asc</item>
    </string-array>
</resources>
