<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory
    android:title="@string/aboutCategory">
    <Preference android:title="@string/mainDeveloperTitle"
        android:summary="@string/mainDeveloperSummary"
                android:icon="@drawable/about"
        >
    </Preference>
    <Preference android:title="@string/licence"
        android:summary="@string/show">
        <intent
            android:action="cz.fely.weightedaverage.SHOW_LICENSES"
        />
    </Preference>
    <Preference
        android:key="version"
        android:title="@string/versionTitle"
        android:summary="@string/versionName">
    </Preference>

    <Preference
        android:title="@string/changelog"
        android:key="changelog"
        android:summary="@string/show">
    </Preference>
</PreferenceCategory>
</PreferenceScreen>