<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_deletemarks"
        android:orderInCategory="100"
        android:title="@string/vymazatZnamky"
        android:icon="@drawable/remove"
        android:titleCondensed="@string/vymazatZnamky"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:titleCondensed="@string/action_settings"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="102"
        android:title="@string/action_help"
        android:titleCondensed="@string/action_help" />

    <item
        android:title="@string/aboutAppMenuItem"
        android:id="@+id/action_about"
        android:titleCondensed="@string/aboutAppMenuItem"
        android:orderInCategory="103" />

</menu>