<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout tools:context="cz.fely.weightedaverage.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="wrap_content"
        android:id="@+id/etName"
        android:layout_toStartOf="@+id/etMark"
        android:layout_toLeftOf="@+id/etMark"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tool_bar"
        android:textSize="18sp"
        android:hint="@string/hintET"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_height="50dp"
        android:maxLength="25"
        android:maxLines="1"
        />

    <EditText
        android:layout_width="80dp"
        android:id="@+id/etMark"
        android:textSize="18sp"
        android:hint="@string/mark"
        android:inputType="number|numberDecimal"
        android:gravity="center_vertical"
        android:imeOptions="actionNext"
        android:layout_height="50dp"
        android:layout_below="@+id/tool_bar"
        android:layout_toLeftOf="@+id/etWeight"
        android:layout_toStartOf="@+id/etWeight"
        android:maxLength="3"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="60dp"
        android:id="@+id/etWeight"
        android:layout_below="@+id/tool_bar"
        android:textSize="18sp"
        android:hint="@string/weight"
        android:inputType="number"
        android:ems="10"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textAlignment="center"
        android:maxLength="3"
        android:imeOptions="actionDone"
        android:layout_height="50dp"/>


    <TextView
        android:layout_height="35dp"
        android:layout_width="wrap_content"
        android:id="@+id/averageTV"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnAdd"
        android:textSize="25sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:text="@string/prumer" />

    <ListView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/lvZnamky"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearl2"
        style="@style/Widget.AppCompat.ListView"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btnAdd"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etName"
        android:textSize="18sp"
        android:text="@string/buttonAdd"
        android:onClick="addMark"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/button_style"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_height="35dp"
        android:layout_width="match_parent"
        android:id="@+id/linearl2"
        android:layout_below="@+id/averageTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_height="35dp"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textStyle="normal|italic"
            android:text="@string/name"
            android:layout_weight="1"
            android:id="@+id/name2"/>

        <TextView
            android:layout_height="35dp"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textStyle="normal|bold"
            android:text="@string/mark"
            android:id="@+id/mark2"/>

        <TextView
            android:layout_height="35dp"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textStyle="normal|bold"
            android:text="@string/weight"
            android:id="@+id/weight2"/>

    </LinearLayout>

</RelativeLayout>