<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="300sp"

                android:layout_height="130sp"
                android:id="@+id/rl">

    <EditText
        android:id="@+id/etMarkPopUp"
        android:textSize="18sp"
        android:hint="@string/mark"
        android:inputType="numberDecimal"
        android:gravity="center_vertical"
        android:imeOptions="actionNext"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/etWeightPopUp"
        android:layout_toStartOf="@+id/etWeightPopUp"
        android:layout_width="80dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:srcCompat="@drawable/remove"
        android:layout_alignBottom="@+id/btnAddPopUp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnClosePopUp"
        android:background="@drawable/button_style"
        android:layout_below="@+id/etWeightPopUp"
        android:layout_toRightOf="@+id/etMarkPopUp"
        android:layout_toEndOf="@+id/etMarkPopUp"
        tools:ignore="VectorDrawableCompat"/>

    <EditText
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:hint="@string/hintETPop"
        android:inputType="text"
        android:ems="10"
        android:imeOptions="actionNext"
        android:layout_height="50dp"
        android:id="@+id/etNamePopUp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/etMarkPopUp"
        android:layout_toStartOf="@+id/etMarkPopUp"/>

    <Button
        android:text="@string/buttonAdd"
        android:layout_width="wrap_content"
        android:id="@+id/btnAddPopUp"
        android:background="@drawable/button_style"
        android:layout_below="@+id/etNamePopUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/etWeightPopUp"
        android:layout_toStartOf="@+id/etWeightPopUp"
        android:layout_height="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_below="@+id/btnAddPopUp"
        android:id="@+id/tvAveragePopUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="30dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:text="@string/prumer"/>

    <EditText
        android:id="@+id/etWeightPopUp"
        android:textSize="18sp"
        android:hint="@string/weight"
        android:inputType="number"
        android:ems="10"
        android:textAlignment="center"
        android:maxLength="2"
        android:imeOptions="actionDone"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="50dp"
        android:layout_width="60dp"/>

</RelativeLayout>